--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.3",
+    "@mui/styles": "^5.15.3",
     "axios": "^1.6.5",
     "css-mediaquery": "^0.1.2",
     "next": "^12.3.4",
+    "next-compose-plugins": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -24,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^12.3.4",
+    "sass": "^1.69.7",
     "typescript": "^5"
   }
 }
