--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.3",
+    "@mui/material": "^5.15.4",
     "@mui/styles": "^5.15.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "css-mediaquery": "^0.1.2",
+    "mini-css-extract-plugin": "^2.7.7",
     "next": "^12.3.4",
-    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.5",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -24,9 +27,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "css-loader": "^6.9.0",
     "eslint": "^8",
     "eslint-config-next": "^12.3.4",
+    "file-loader": "^6.2.0",
     "sass": "^1.69.7",
-    "typescript": "^5"
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.4",
+    "typescript": "^5",
+    "webpack": "^5.89.0"
   }
 }
