--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-images": "^1.8.5",
     "node-sass": "^7.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@types/node": "^20",
