--- a/src/data/AppConfig.json
+++ b/src/data/AppConfig.json
@@ -16,6 +16,23 @@
         "mainColorUpgradePro": "#329678",
         "appleClientId": ""
     },
+    "easyprep": {
+        "gaId": "UA-167769768-1",
+        "tagManagerId": "GTM-NFL5XHT",
+        "appId": null,
+        "googleVerifyId": "J65PLlMKrhHcS6Ql3keUP-l6_tzEDu_5RgZxybRrhDE",
+        "mainColor": "#fbeb9f",
+        "mainColorBold": "#0e636f",
+        "mainBackgroundColor": "#f8f3ef",
+        "GA4ID": "G-9WFY79Y40M",
+        "pageId": "110654290809849",
+        "wpDomain": "https://passemall.com",
+        "cookie": "#278F61",
+        "bgColorStartTest": "#e2a650",
+        "bgColorCloseCookie": "#3E6798",
+        "mainColorUpgradePro": "#329678",
+        "appleClientId": ""
+    },
     "itexam": {
         "gaId": "UA-167769768-18",
         "tagManagerId": "GTM-NBZTV5D",
