--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "next": "^12.3.4",
         "next-images": "^1.8.5",
         "node-sass": "^7.0.3",
+        "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-slick": "^0.29.0"
