--- a/src/data/AppConfig.json
+++ b/src/data/AppConfig.json
@@ -75,7 +75,7 @@
         "googleVerifyId": "kS0dwjBOA9pZaStotM-lbFAW2fP7vk6-usRhQcPogw0",
         "mainColor": "#615F46",
         "mainColorBold": "#4a482c",
-        "mainBackgroundColor": "#f8fdff",
+        "mainBackgroundColor": "#F9F7EE",
         "cookie": "#666444",
         "GA4ID": "G-REG5WF8B8P",
         "pageId": "104795498352899",
