--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.15.4",
         "@mui/styles": "^5.15.3",
+        "@piotr-cz/redux-persist-idb-storage": "^1.1.3",
         "@reduxjs/toolkit": "^2.0.1",
         "axios": "^1.6.5",
         "css-mediaquery": "^0.1.2",
         "mini-css-extract-plugin": "^2.7.7",
         "next": "^12.3.4",
         "next-images": "^1.8.5",
+        "next-redux-wrapper": "^8.1.0",
         "node-sass": "^7.0.3",
         "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-slick": "^0.29.0"
+        "react-redux": "^7.2.1",
+        "react-slick": "^0.29.0",
+        "redux-persist": "^6.0.0",
+        "redux-persist-transform-encrypt": "^2.0.1"
     },
     "devDependencies": {
         "@types/node": "^20",
