--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.15.5",
         "@mui/material": "^5.15.4",
         "@mui/styles": "^5.15.3",
         "@piotr-cz/redux-persist-idb-storage": "^1.1.3",
