--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@reduxjs/toolkit": "^2.0.1",
         "axios": "^1.6.5",
         "css-mediaquery": "^0.1.2",
+        "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^2.7.7",
         "next": "^12.3.4",
         "next-images": "^1.8.5",
