--- a/src/data/AppConfig.json
+++ b/src/data/AppConfig.json
@@ -24,9 +24,9 @@
         "mainColor": "#fbeb9f",
         "mainColorBold": "#0e636f",
         "mainBackgroundColor": "#f8f3ef",
-        "GA4ID": "G-9WFY79Y40M",
+        "GA4ID": "G-8N9FNDCM44",
         "pageId": "110654290809849",
-        "wpDomain": "https://passemall.com",
+        "wpDomain": "https://easy-prep.org",
         "cookie": "#278F61",
         "bgColorStartTest": "#e2a650",
         "bgColorCloseCookie": "#3E6798",
