--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
         },
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["next-env.d.ts", "**/*.ts", "src", "gen-sitemap.js"],
+    "include": ["next-env.d.ts", "**/*.ts", "src", "gen-data.js"],
     "exclude": ["node_modules"]
 }
