--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@piotr-cz/redux-persist-idb-storage": "^1.1.3",
         "@reduxjs/toolkit": "^2.0.1",
         "axios": "^1.6.5",
+        "crypto-js": "^4.2.0",
         "css-mediaquery": "^0.1.2",
         "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^2.7.7",
