--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@mui/styles": "^5.15.3",
         "@piotr-cz/redux-persist-idb-storage": "^1.1.3",
         "@reduxjs/toolkit": "^2.0.1",
+        "adblock-detect-react": "^1.3.1",
         "axios": "^1.6.5",
         "crypto-js": "^4.2.0",
         "css-mediaquery": "^0.1.2",
