--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "node-sass": "^7.0.3",
         "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
+        "react-adsense": "^0.1.0",
         "react-dom": "^17.0.2",
         "react-paypal-button-v2": "^2.6.3",
         "react-redux": "^7.2.1",
