--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
         "axios": "^1.6.5",
         "crypto-js": "^4.2.0",
         "css-mediaquery": "^0.1.2",
-        "jsonwebtoken": "8.5.1",
+        "jsonwebtoken": "^8.5.1",
         "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^2.7.7",
         "next": "^12.3.4",
         "next-images": "^1.8.5",
         "next-redux-wrapper": "^8.1.0",
-        "node-sass": "^7.0.3",
         "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
         "react-adsense": "^0.1.0",
