--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
-    "@mui/lab": "^6.0.0-beta.16",
     "@mui/material": "^6.1.8",
     "@mui/material-nextjs": "^6.1.9",
     "@next/third-parties": "^15.0.3",
@@ -34,9 +33,11 @@
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "next": "15.0.3",
-    "next-themes": "^0.4.3",
+    "next-auth": "^4.24.11",
+    "rc-util": "^5.44.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "resize-observer-polyfill": "^1.5.1"
