--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "rc-util": "^5.44.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
