--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "PORT=3000 next dev",
         "build": "next build",
         "start": "next start",
+        "build:css": "postcss src/styles/tailwinds.css -o src/styles/styles.css",
         "lint": "next lint"
     },
     "dependencies": {
@@ -18,8 +19,11 @@
         "@reduxjs/toolkit": "^2.0.1",
         "adblock-detect-react": "^1.3.1",
         "axios": "^1.6.5",
+        "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
         "css-mediaquery": "^0.1.2",
+        "embla-carousel": "^8.5.1",
+        "embla-carousel-react": "^8.5.1",
         "jsonwebtoken": "^8.5.1",
         "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^2.7.7",
@@ -40,13 +44,18 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
         "css-loader": "^6.9.0",
         "eslint": "^8",
         "eslint-config-next": "^12.3.4",
         "file-loader": "^6.2.0",
+        "postcss": "^8.4.49",
+        "postcss-cli": "^11.0.0",
+        "postcss-preset-env": "^10.1.1",
         "sass": "^1.69.7",
         "sass-loader": "^13.3.3",
         "style-loader": "^3.3.4",
+        "tailwindcss": "^3.4.16",
         "typescript": "^5",
         "webpack": "^5.89.0"
     }
