--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "next": "15.0.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "rc-util": "^5.44.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
