--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "PORT=3000 next dev",
+        "dev": "next dev -p 3000",
         "build": "next build",
         "start": "next start",
         "build:css": "postcss src/styles/tailwinds.css -o src/styles/styles.css",
