--- a/src/data/AppConfig.json
+++ b/src/data/AppConfig.json
@@ -57,7 +57,7 @@
         "googleVerifyId": "alG3R0D0dTXZb4Nn8ZSB8FYspMh_HAlziNimiRYMO24",
         "mainColor": "#343FA4",
         "mainColorBold": "#263195",
-        "mainBackgroundColor": "#f8f3ef",
+        "mainBackgroundColor": "#F0F2FE",
         "cookie": "#232e95",
         "GA4ID": "G-QH162XH769",
         "pageId": "101878645343877",
