--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "jsonwebtoken": "^9.0.2",
         "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^2.7.7",
-        "next": "15.0.3",
+        "next": "^15.1.1",
         "next-auth": "5.0.0-beta.25",
         "rc-util": "^5.44.0",
         "react": "^19.0.0",
@@ -47,13 +47,13 @@
         "react-dom": "^19.0.0",
         "react-paypal-button-v2": "^2.6.3",
         "react-qr-code": "^2.0.15",
-        "sass": "^1.83.0",
         "react-redux": "^9.1.2",
         "react-slick": "^0.29.0",
         "react-transition-group": "^4.4.5",
         "redux-persist": "^6.0.0",
         "redux-persist-transform-encrypt": "^2.0.1",
         "resize-observer-polyfill": "^1.5.1",
+        "sass": "^1.83.0",
         "throttle-debounce": "^5.0.2"
     },
     "devDependencies": {
