--- a/src/data/dynamic/appConfig.json
+++ b/src/data/dynamic/appConfig.json
@@ -38,8 +38,8 @@
         "tagManagerId": "GTM-MLS2NPZ",
         "appId": 4902462618075136,
         "googleVerifyId": "alG3R0D0dTXZb4Nn8ZSB8FYspMh_HAlziNimiRYMO24",
-        "mainColor": "#343FA4",
-        "mainColorBold": "#263195",
+        "mainColor": "#343F82",
+        "mainColorBold": "#181F47",
         "mainBackgroundColor": "#F0F2FE",
         "cookie": "#232e95",
         "GA4ID": "G-QH162XH769",
