--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-slick": "^0.23.13",
         "@types/react-window": "^1.8.8",
         "@types/throttle-debounce": "^5.0.2",
         "css-loader": "^7.1.2",
