--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
         "redux-persist": "^6.0.0",
         "redux-persist-transform-encrypt": "^2.0.1",
         "resize-observer-polyfill": "^1.5.1",
-        "sass": "^1.83.0",
         "throttle-debounce": "^5.0.2"
     },
     "devDependencies": {
@@ -70,15 +69,18 @@
         "@types/react-slick": "^0.23.13",
         "@types/react-window": "^1.8.8",
         "@types/throttle-debounce": "^5.0.2",
+        "autoprefixer": "^10.4.20",
         "css-loader": "^7.1.2",
         "eslint": "^8",
         "eslint-config-next": "15.0.3",
         "fs-extra": "^11.2.0",
         "husky": "^9.1.7",
-        "mini-css-extract-plugin": "^2.9.2",
         "next-compose-plugins": "^2.2.1",
         "picocolors": "^1.1.1",
         "postcss": "^8",
+        "postcss-loader": "^8.1.1",
+        "postcss-preset-env": "^10.1.2",
+        "sass": "^1.83.0",
         "sass-loader": "^16.0.3",
         "style-loader": "^4.0.0",
         "tailwind-merge": "^2.5.4",
