--- a/src/data/dynamic/appConfig.json
+++ b/src/data/dynamic/appConfig.json
@@ -57,7 +57,7 @@
         "appId": 4878338973761536,
         "googleVerifyId": "kS0dwjBOA9pZaStotM-lbFAW2fP7vk6-usRhQcPogw0",
         "mainColor": "#7C6F5B",
-        "mainColorBold": "#4a482c",
+        "mainColorBold": "#443C2F",
         "mainBackgroundColor": "#F9F7EE",
         "cookie": "#666444",
         "GA4ID": "G-REG5WF8B8P",
