add new contact-us

--- a/src/data/dynamic/appConfig.json
+++ b/src/data/dynamic/appConfig.json
@@ -41,6 +41,7 @@
         "mainColor": "#343F82",
         "mainColorBold": "#181F47",
         "mainBackgroundColor": "#F0F2FE",
+        "mainBackgroundColorContact": "#e6eaff",
         "cookie": "#232e95",
         "GA4ID": "G-QH162XH769",
         "pageId": "101878645343877",
@@ -59,6 +60,7 @@
         "mainColor": "#7C6F5B",
         "mainColorBold": "#443C2F",
         "mainBackgroundColor": "#F9F7EE",
+        "mainBackgroundColorContact": "#7c6f5b0a",
         "cookie": "#666444",
         "GA4ID": "G-REG5WF8B8P",
         "pageId": "104795498352899",
