--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-qr-code": "^2.0.15",
         "react-redux": "^9.1.2",
         "react-slick": "^0.29.0",
+        "react-toastify": "^11.0.2",
         "react-transition-group": "^4.4.5",
         "redux-persist": "^6.0.0",
         "redux-persist-transform-encrypt": "^2.0.1",
