--- a/src/data/dynamic/appConfig.json
+++ b/src/data/dynamic/appConfig.json
@@ -42,6 +42,7 @@
         "mainColorBold": "#181F47",
         "mainBackgroundColor": "#F0F2FE",
         "mainBackgroundColorContact": "#e6eaff",
+        "linearGradientBanner": " linear-gradient(90deg, #DBEBFD 0%, #E2DFFF 100%)",
         "cookie": "#232e95",
         "GA4ID": "G-QH162XH769",
         "pageId": "101878645343877",
@@ -61,6 +62,7 @@
         "mainColorBold": "#443C2F",
         "mainBackgroundColor": "#F9F7EE",
         "mainBackgroundColorContact": "#7c6f5b0a",
+        "linearGradientBanner": "linear-gradient(90deg, #FFEED5 0%, #FFFCD9 100%)",
         "cookie": "#666444",
         "GA4ID": "G-REG5WF8B8P",
         "pageId": "104795498352899",
