--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
         "tailwind-merge": "^2.5.4",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
+    },
+    "resolutions": {
+        "string-width": "^4.2.0"
     }
 }
