--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-slick": "^0.29.0",
         "react-toastify": "^11.0.2",
         "react-transition-group": "^4.4.5",
+        "reselect": "^5.1.1",
         "resize-observer-polyfill": "^1.5.1",
         "throttle-debounce": "^5.0.2"
     },
