--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "embla-carousel": "^8.5.1",
         "embla-carousel-react": "^8.5.1",
         "framer-motion": "^11.12.0",
+        "idb": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
         "memory-cache": "^0.2.0",
         "next": "^15.1.1",
@@ -51,6 +52,8 @@
         "react-slick": "^0.29.0",
         "react-toastify": "^11.0.2",
         "react-transition-group": "^4.4.5",
+        "react-virtualized-auto-sizer": "^1.0.25",
+        "react-window": "^1.8.11",
         "reselect": "^5.1.1",
         "resize-observer-polyfill": "^1.5.1",
         "throttle-debounce": "^5.0.2"
