--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
         "embla",
         "mathjax",
         "mtui",
+        "passemall",
         "persistor",
         "reduxjs",
         "rgba",
+        "totoro",
         "vampiro"
     ],
     "editor.codeActionsOnSave": {
