--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "public/sw.js", "src/app/[appShortName]/[state]/custom_test/_components/modalDelete"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "public/sw.js", "src/app/[appShortName]/[state]/custom_test/_components/modalDelete", "src/sw.js"],
   "exclude": ["node_modules","src/scripts"]
 }
