--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "rgba",
         "subcription",
         "totoro",
+        "turbopack",
         "vampiro"
     ],
     "editor.codeActionsOnSave": {
