--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "next dev --turbopack -p 3000",
+        "build": "next build",
+        "start": "next start -p 3000",
+        "lint": "next lint",
         "prepare": "husky",
         "setup": "node src/scripts/setupProject.js",
         "sync-app-to-app-root": "node src/scripts/sync_code.js",
-        "dev": "next dev --turbopack -p 3000",
-        "build:router": "node src/scripts/create_router.js",
-        "build": "next build",
-        "start": "next start -p 3000",
-        "lint": "next lint"
+        "build:router": "node src/scripts/create_router.js"
     },
     "dependencies": {
         "@emotion/react": "^11.13.5",
