--- a/package.json
+++ b/package.json
@@ -1,95 +1,109 @@
 {
-    "name": "my-app",
-    "version": "0.1.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "next dev --turbopack -p 3000",
-        "build": "next build",
-        "start": "next start -p 3000",
-        "lint": "next lint",
-        "prepare": "husky",
-        "setup": "node src/scripts/setupProject.js",
-        "sync-app-to-app-root": "node src/scripts/sync_code.js",
-        "build:router": "node src/scripts/create_router.js"
-    },
-    "dependencies": {
-        "@emotion/react": "^11.13.5",
-        "@emotion/styled": "^11.13.5",
-        "@mui/icons-material": "^6.1.9",
-        "@mui/material": "^6.1.8",
-        "@mui/material-nextjs": "^6.1.9",
-        "@mui/styles": "^5.15.3",
-        "@next/third-parties": "^15.0.3",
-        "@paypal/react-paypal-js": "^8.7.0",
-        "@react-spring/web": "^9.7.5",
-        "@reduxjs/toolkit": "^2.3.0",
-        "@use-gesture/react": "^10.3.1",
-        "axios": "^1.7.7",
-        "better-react-mathjax": "^2.0.4-beta1",
-        "chart.js": "^4.4.7",
-        "clsx": "^2.1.1",
-        "crypto": "^1.0.1",
-        "crypto-js": "^4.2.0",
-        "dexie": "^4.0.10",
-        "embla-carousel": "^8.5.1",
-        "embla-carousel-react": "^8.5.1",
-        "framer-motion": "^11.12.0",
-        "fuckadblock": "^3.2.1",
-        "idb": "^8.0.1",
-        "jsonwebtoken": "^9.0.2",
-        "memory-cache": "^0.2.0",
-        "next": "^15.1.1",
-        "next-auth": "5.0.0-beta.25",
-        "rc-util": "^5.44.0",
-        "react": "^19.0.0",
-        "react-chartjs-2": "^5.2.0",
-        "react-dom": "^19.0.0",
-        "react-paypal-button-v2": "^2.6.3",
-        "react-qr-code": "^2.0.15",
-        "react-redux": "^9.1.2",
-        "react-slick": "^0.29.0",
-        "react-toastify": "^11.0.2",
-        "react-transition-group": "^4.4.5",
-        "react-virtualized-auto-sizer": "^1.0.25",
-        "react-window": "^1.8.11",
-        "reselect": "^5.1.1",
-        "resize-observer-polyfill": "^1.5.1",
-        "throttle-debounce": "^5.0.2"
-    },
-    "devDependencies": {
-        "@clack/prompts": "^0.8.2",
-        "@next/bundle-analyzer": "^15.0.3",
-        "@types/chart.js": "^2.9.41",
-        "@types/crypto-js": "^4.2.2",
-        "@types/jsonwebtoken": "^9.0.7",
-        "@types/mathjax": "^0.0.40",
-        "@types/memory-cache": "^0.2.6",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "@types/react-slick": "^0.23.13",
-        "@types/react-window": "^1.8.8",
-        "@types/throttle-debounce": "^5.0.2",
-        "autoprefixer": "^10.4.20",
-        "css-loader": "^7.1.2",
-        "eslint": "^8",
-        "eslint-config-next": "15.0.3",
-        "fs-extra": "^11.2.0",
-        "husky": "^9.1.7",
-        "next-compose-plugins": "^2.2.1",
-        "picocolors": "^1.1.1",
-        "postcss": "^8",
-        "postcss-loader": "^8.1.1",
-        "postcss-preset-env": "^10.1.2",
-        "sass": "^1.83.0",
-        "sass-loader": "^16.0.3",
-        "style-loader": "^4.0.0",
-        "tailwind-merge": "^2.5.4",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
-    },
-    "resolutions": {
-        "string-width": "^4.2.0"
-    }
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev --turbopack -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "prepare": "husky",
+    "setup": "node src/scripts/setupProject.js",
+    "sync-app-to-app-root": "node src/scripts/sync_code.js",
+    "build:router": "node src/scripts/create_router.js"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.8",
+    "@mui/material-nextjs": "^6.1.9",
+    "@mui/styles": "^5.15.3",
+    "@next/third-parties": "^15.0.3",
+    "@paypal/react-paypal-js": "^8.7.0",
+    "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@use-gesture/react": "^10.3.1",
+    "axios": "^1.7.7",
+    "better-react-mathjax": "^2.0.4-beta1",
+    "chart.js": "^4.4.7",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "dexie": "^4.0.10",
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.12.0",
+    "fuckadblock": "^3.2.1",
+    "idb": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "memory-cache": "^0.2.0",
+    "next": "^15.1.1",
+    "next-auth": "5.0.0-beta.25",
+    "rc-util": "^5.44.0",
+    "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^19.0.0",
+    "react-paypal-button-v2": "^2.6.3",
+    "react-qr-code": "^2.0.15",
+    "react-redux": "^9.1.2",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^11.0.2",
+    "react-transition-group": "^4.4.5",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window": "^1.8.11",
+    "reselect": "^5.1.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "throttle-debounce": "^5.0.2"
+  },
+  "devDependencies": {
+    "@clack/prompts": "^0.8.2",
+    "@next/bundle-analyzer": "^15.0.3",
+    "@playwright/test": "^1.49.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/chart.js": "^2.9.41",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/mathjax": "^0.0.40",
+    "@types/memory-cache": "^0.2.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
+    "@types/react-window": "^1.8.8",
+    "@types/throttle-debounce": "^5.0.2",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.8.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^2.1.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "fs-extra": "^11.2.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "picocolors": "^1.1.1",
+    "postcss": "^8",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.2",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.13.0"
+  },
+  "resolutions": {
+    "string-width": "^4.2.0"
+  }
 }
