--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "clsx",
         "Dexie",
         "embla",
+        "indexeddb",
         "mathjax",
         "mtui",
         "passemail",
