--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest",
+    "test:e2e": "playwright test",
     "prepare": "husky",
-    "setup": "node src/scripts/setupProject.js",
-    "sync-app-to-app-root": "node src/scripts/sync_code.js",
-    "build:router": "node src/scripts/create_router.js"
+    "setup": "node src/scripts/setupProject.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -35,12 +36,10 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.12.0",
     "fuckadblock": "^3.2.1",
-    "idb": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "next": "^15.1.1",
     "next-auth": "5.0.0-beta.25",
-    "rc-util": "^5.44.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
@@ -65,6 +64,7 @@
     "@testing-library/react": "^16.1.0",
     "@types/chart.js": "^2.9.41",
     "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mathjax": "^0.0.40",
     "@types/memory-cache": "^0.2.6",
@@ -85,6 +85,7 @@
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "fake-indexeddb": "^6.0.0",
     "fs-extra": "^11.2.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
