--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^4.4.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "css-mediaquery": "^0.1.2",
     "dexie": "^4.0.10",
     "embla-carousel": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
@@ -64,6 +65,7 @@
     "@testing-library/react": "^16.1.0",
     "@types/chart.js": "^2.9.41",
     "@types/crypto-js": "^4.2.2",
+    "@types/css-mediaquery": "^0.1.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mathjax": "^0.0.40",
