--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "@types/react-window": "^1.8.8",
+    "@types/redux-mock-store": "^1.5.0",
     "@types/throttle-debounce": "^5.0.2",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
@@ -99,6 +100,7 @@
     "postcss": "^8",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.2",
+    "redux-mock-store": "^1.5.5",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
