update-end-test

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "better-react-mathjax": "^2.0.4-beta1",
     "chart.js": "^4.4.7",
     "crypto": "^1.0.1",
-    "crypto-js": "^4.2.0",
     "css-mediaquery": "^0.1.2",
     "dexie": "^4.0.10",
     "embla-carousel": "^8.5.1",
@@ -44,6 +43,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
     "react-paypal-button-v2": "^2.6.3",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
