--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
+    "type": "tsc",
     "test": "yarn test:unit && yarn test:e2e",
     "test:unit": "jest --runInBand",
     "test:e2e": "playwright test",
@@ -44,7 +45,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
-    "react-paypal-button-v2": "^2.6.3",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-slick": "^0.29.0",
