--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,10 @@ src/styles/config.css
 ssh_keys/id_rsa
 deploy_.sh
 build-easyprep.zip
-node_modules/
+
+# Các file và thư mục của Playwright
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
