--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "yarn &&  next dev --turbopack -p 3001",
+    "dev": "yarn &&  next dev --turbopack ",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start",
     "lint": "next lint",
     "type": "tsc",
     "test": "yarn test:unit && yarn test:e2e",
@@ -19,10 +19,10 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
-    "@mui/material": "^6.1.8",
+    "@mui/material": "^6.1.9",
     "@mui/material-nextjs": "^6.1.9",
     "@mui/styles": "^5.15.3",
-    "@next/third-parties": "^15.0.3",
+    "@next/third-parties": "^15.1.6",
     "@paypal/react-paypal-js": "^8.7.0",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
@@ -100,6 +100,7 @@
     "postcss": "^8",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.2",
+    "redux": "^5.0.1",
     "redux-mock-store": "^1.5.5",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.3",
@@ -108,7 +109,8 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "webpack": "^5.97.1"
   },
   "resolutions": {
     "string-width": "^4.2.0"
