--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "subcription",
         "totoro",
         "turbopack",
+        "uuidv",
         "vampiro"
     ],
     "editor.codeActionsOnSave": {
