--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
@@ -56,7 +57,8 @@
     "reselect": "^5.1.1",
     "resize-observer-polyfill": "^1.5.1",
     "throttle-debounce": "^5.0.2",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@clack/prompts": "^0.8.2",
