--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "yarn &&  next dev --turbopack ",
         "build": "next build",
-        "start": "next start",
+        "start": "next start -p 3000",
         "lint": "next lint",
         "type": "tsc",
         "test": "yarn test:unit && yarn test:e2e",
