--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,6 +25,7 @@ jobs:
               run: |
                 touch .env
                 echo "NEXT_PUBLIC_API_URL=${{ secrets.API_URL }}" >> .env
+                echo "DEV_BASE_API=${{ secrets.API_URL }}" >> .env
                 echo "APP_ID=${{ secrets.APP_ID }}" >> .env
                 echo "NEXT_PUBLIC_APPLE_ID=${{ secrets.NEXT_PUBLIC_APPLE_ID }}" >> .env
                 echo "NEXT_PUBLIC_APP_SHORT_NAME=${{ secrets.NEXT_PUBLIC_APP_SHORT_NAME }}" >> .env
