--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,6 +32,7 @@ jobs:
                 echo "NEXT_PUBLIC_GOOGLE_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ID }}" >> .env
                 echo "NEXT_PUBLIC_SECRET_KEY=${{ secrets.NEXT_PUBLIC_SECRET_KEY }}" >> .env
                 echo "AUTH_TRUST_HOST=${{ secrets.API_URL }}" >> .env
+                echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" >> .env
                 cat .env
 
             - name: Set Docker Image Name
