--- a/docker/cdl/Dockerfile
+++ b/docker/cdl/Dockerfile
@@ -22,7 +22,7 @@ RUN yarn run build
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV=production
+ENV NODE_ENV=development
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
