--- a/.github/workflows/asvab-dev.yml
+++ b/.github/workflows/asvab-dev.yml
@@ -22,18 +22,18 @@ jobs:
 
             - name: Create .env file
               run: |
-                touch .env
-                echo "NEXT_PUBLIC_API_URL=${{ secrets.ASVAB_API_URL }}" >> .env
-                echo "DEV_BASE_API=${{ secrets.ASVAB_API_URL }}" >> .env
-                echo "APP_ID=${{ secrets.APP_ID }}" >> .env
-                echo "NEXT_PUBLIC_APPLE_ID=${{ secrets.NEXT_PUBLIC_APPLE_ID }}" >> .env
-                echo "NEXT_PUBLIC_APP_SHORT_NAME=${{ secrets.NEXT_PUBLIC_APP_SHORT_NAME }}" >> .env
-                echo "NEXT_PUBLIC_GOOGLE_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ID }}" >> .env
-                echo "NEXT_PUBLIC_SECRET_KEY=${{ secrets.NEXT_PUBLIC_SECRET_KEY }}" >> .env
-                echo "AUTH_TRUST_HOST=${{ secrets.ASVAB_API_URL }}" >> .env
-                echo "NEXT_PUBLIC_WORDPRESS_API_URL=${{ secrets.NEXT_PUBLIC_WORDPRESS_API_URL }}" >> .env
-                echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" >> .env
-                cat .env
+                  touch .env
+                  echo "NEXT_PUBLIC_API_URL=${{ secrets.ASVAB_API_URL }}" >> .env
+                  echo "DEV_BASE_API=${{ secrets.ASVAB_API_URL }}" >> .env
+                  echo "APP_ID=${{ secrets.APP_ID }}" >> .env
+                  echo "NEXT_PUBLIC_APPLE_ID=${{ secrets.NEXT_PUBLIC_APPLE_ID }}" >> .env
+                  echo "NEXT_PUBLIC_APP_SHORT_NAME=${{ secrets.NEXT_PUBLIC_APP_SHORT_NAME }}" >> .env
+                  echo "NEXT_PUBLIC_GOOGLE_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ID }}" >> .env
+                  echo "NEXT_PUBLIC_SECRET_KEY=${{ secrets.NEXT_PUBLIC_SECRET_KEY }}" >> .env
+                  echo "AUTH_TRUST_HOST=${{ secrets.ASVAB_API_URL }}" >> .env
+                  echo "NEXT_PUBLIC_WORDPRESS_API_URL=${{ secrets.NEXT_PUBLIC_WORDPRESS_API_URL }}" >> .env
+                  echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" >> .env
+                  cat .env
 
             - name: Set Docker Image Name
               run: |
@@ -55,7 +55,7 @@ jobs:
               uses: docker/build-push-action@v5
               with:
                   context: .
-                  file: ../docker/asvab/Dockerfile
+                  file: docker/asvab/Dockerfile
                   push: true
                   tags: ${{ env.IMAGE_URL }},${{ env.IMAGE_URL_LATEST }}
                   cache-from: type=gha
