--- a/.github/workflows/cdl-dev.yml
+++ b/.github/workflows/cdl-dev.yml
@@ -49,7 +49,7 @@ jobs:
               uses: docker/build-push-action@v5
               with:
                   context: .
-                  file: ../docker/cdl/Dockerfile
+                  file: docker/cdl/Dockerfile
                   push: true
                   tags: ${{ env.IMAGE_URL }},${{ env.IMAGE_URL_LATEST }}
                   cache-from: type=gha
